fixed dependency bug